=======
CHANGES
=======

Version 0.7.1 (unreleased)
--------------------------

- ...


Version 0.7.0 (2009-05-11)
--------------------------

- Update dependencies:

   * Use ``zope.container`` instead of ``zope.app.container``.
   * Use ``zope.site`` instead of ``zope.app.component``.
   * Use ``zope.authentication`` and ``zope.principalregistry`` instead
     of ``zope.app.security``.
   * Use ``zope.password`` instead of maintaining a copy of password
     managers.

- Drop dependency on z3c.i18n and recreate a message factory instead.


Version 0.6.0 (2009-01-04)
--------------------------

- Feature: added support for local IUnauthenticatedPrincipal. This is usefull
  if you need to apply local roles to IUnauthenticatedPrincipal. This was not
  possible before and is not possible in zope.app.authentication

- Feature: implemented initial grant view based on ISource widget. Note, this
  source widget terms implementation which is very complex to understand will
  get moved to z3c.from if we fixed the ITerm dependency. Which means ITerm
  needs to get moved out of zope.app.form first.

- Feature: added support for next utility lookup in authenticate call. By
  default the principals from the global principalregistry get involved now.
  You can disable this feature by setting includeNextUtilityForAuthenticate to
  False.

- Feature: added PrincipalRegistryAuthenticatorPlugin which allows to
  authenticate principals defined in global principal registry.

- Feature: implemented z3c.form prefix support in SessionCredentialsPlugin. Now
  there is an option called prefixes which can be used for define a list of
  used z3c.form prefixes. This makes it simpler for supporting different forms
  and adjust the credential extraction.

- Renamed IGroupPrincipal to IFoundGroup which makes it more understandable
  why this adapter implementation is needed. The IFoundGroup adapter is now
  also used for zope.security.interfaces.IGroup principals. This makes it